Fixed bug in code that wrap links around prereqs. Removed bullets in HKN stats in popup lenses. Minor code refactoring.

--- a/src/webapp/styles/browse.css
+++ b/src/webapp/styles/browse.css
@@ -94,7 +94,7 @@
 }
 
 /* No numbering on browsing list of classes */
-#browsing-interface li {
+.hkn-statistics li {
     list-style-type: none;
 }
 
